conteudo da app e design base

--- a/index.html
+++ b/index.html
@@ -6,9 +6,76 @@
     <title>Só de Cenoura Garçom</title>
     <link rel="stylesheet" href="icons/material.css">
     <link rel="stylesheet" href="css/materialize.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
+    <div class="topo-fixo z-depth-1">
+        <div class="valign-wrapper yellow darken-4 white-text">
+            <h5 class="titulo">Só de Cenoura</h5>
+
+            <div>
+                <i class="material-icons waves-effect
+                          waves-light waves-circle">more_vert</i>
+            </div>
+        </div>
+
+        <ul class="tabs yellow darken-4">
+            <li class="tab">
+                <a href="#bolos"
+                   class="white-text waves-effect waves-light">
+                    Bolos
+                </a>
+            </li>
+            <li class="tab">
+                <a href="#bebidas"
+                   class="white-text waves-effect waves-light">
+                    Bebidas
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div id="bolos" class="section">
+        <h6 class="container brown-text">Fatia</h6>
+        <div class="collection">
+            <a class="collection-item waves-effect black-text">Só de Cenoura</a>
+            <a class="collection-item waves-effect black-text">Com Nutella</a>
+            <a class="collection-item waves-effect black-text">De Brigadeiro</a>
+            <a class="collection-item waves-effect black-text">Açucarado</a>
+        </div>
+
+        <h6 class="container brown-text">Inteiro</h6>
+        <div class="collection">
+            <a class="collection-item waves-effect black-text">Só de Cenoura inteiro</a>
+            <a class="collection-item waves-effect black-text">Com Nutella inteiro</a>
+            <a class="collection-item waves-effect black-text">De Brigadeiro inteiro</a>
+            <a class="collection-item waves-effect black-text">Açucarado inteiro</a>
+        </div>
+    </div>
+
+    <div id="bebidas" class="section">
+        <h6 class="container brown-text">Cafés</h6>
+        <div class="collection">
+            <a class="collection-item waves-effect black-text">Espresso</a>
+            <a class="collection-item waves-effect black-text">Capuccino</a>
+            <a class="collection-item waves-effect black-text">Mocachino</a>
+        </div>
+
+        <h6 class="container brown-text">Refrigerantes</h6>
+        <div class="collection">
+            <a class="collection-item waves-effect black-text">Soda</a>
+            <a class="collection-item waves-effect black-text">Guaraná</a>
+            <a class="collection-item waves-effect black-text">Coca</a>
+        </div>
+
+        <h6 class="container brown-text">Sucos</h6>
+        <div class="collection">
+            <a class="collection-item waves-effect black-text">Melancia</a>
+            <a class="collection-item waves-effect black-text">Tangerina</a>
+            <a class="collection-item waves-effect black-text">Limão</a>
+        </div>
+    </div>
 
 
     <script src="js/jquery.min.js"></script>
