--- a/index.html
+++ b/index.html
@@ -80,5 +80,6 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
