--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
             <h5 class="titulo">Só de Cenoura</h5>
 
             <div>
-                <i class="material-icons waves-effect
-                          waves-light waves-circle">more_vert</i>
+                <i class="material-icons waves-effect waves-light
+                          waves-circle dropdown-button"
+                    data-activates="submenu" data-gutter="5"
+                    data-constrainwidth="false">
+                        more_vert
+                </i>
+
+                <ul id="submenu" class="dropdown-content">
+                  <li><a class="black-text acao-limpar">Limpar</a></li>
+                </ul>
             </div>
         </div>
 
