--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
             <h5 class="titulo">Só de Cenoura</h5>
 
             <div>
+                <i class="material-icons waves-effect waves-light waves-circle scan-qrcode">camera</i>
+
                 <i class="material-icons waves-effect waves-light
                           waves-circle dropdown-button"
                     data-activates="submenu" data-gutter="5"
@@ -111,6 +113,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
+    <script src="cordova.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
