--- a/www/index.html
+++ b/www/index.html
@@ -101,7 +101,7 @@
             <blockquote id="resumo"></blockquote>
         </div>
         <div class="modal-footer">
-            <button class="btn deep-orange waves-effect waves-light modal-close acao-limpar">
+            <button class="btn deep-orange waves-effect waves-light modal-close">
                 Pedir
             </button>
             <button class="btn-flat waves-effect waves-red modal-close acao-limpar">
